# wee

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: publish.yml
src/: cfgs.rs  main.rs
src/cfgs/: mod.rs  support_cargo.rs
src/store/: mod.rs  support_cargo.rs  support_npm.rs
