[package]
authors = ["Aster <192607617@qq.com>"]
description = "Help organize your workspace scripts!"
edition = "2018"
license = "MPL-2.0"
name = "wee"
repository = "https://github.com/GalAster/wee"
version = "0.2.0"

[dependencies]
clap = "3.0.0-beta.1"
colored = "1.9"
serde_json = "1.0"
subprocess = "0.2"
toml = "0.5"

[scripts]
fmt = "cargo fmt"
install = "cargo install --path ."
publish = "cargo publish"
update = "cargo update"
